fix: ens input address overflow PORTAL-459

--- a/ui/app/pages/send/send.scss
+++ b/ui/app/pages/send/send.scss
@@ -239,6 +239,7 @@
     }
 
     &__subtitle {
+      @extend %ellipsify;
       font-size: 0.75rem;
       color: $Grey-500;
       margin-top: 0.25rem;
